...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:error_msg="@{viewmodel.emailError}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="@dimen/space_8dp"
                android:text="@{viewmodel.user.email}"
                android:hint="@string/email"
...

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/login"
            app:layout_constraintEnd_toEndOf="@+id/usernameLayout"
            app:layout_constraintStart_toStartOf="@+id/usernameLayout"
            app:layout_constraintTop_toBottomOf="@+id/usernameLayout"
            app:error_msg="@{viewmodel.passError}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="@dimen/space_8dp"
                android:hint="@string/password"
...
