...
                    app:error_msg="@{viewmodel.nameError}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/userPhoto">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:text="@{viewmodel.name}" />

...
                    app:error_msg="@{viewmodel.surnameError}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/nameLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/surnameEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/surname"
                        android:inputType="text"
                        android:text="@{viewmodel.surname}" />

...
                    app:error_msg="@{viewmodel.cityError}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/surnameLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cityEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/city"
                        android:inputType="text"
                        app:text="@{viewmodel.city}" />

...
                    app:error_msg="@{viewmodel.countryError}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cityLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/countryEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/country"
                        android:inputType="text"
                        android:text="@{viewmodel.country}" />

...
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/titleLevel"
                    app:text="@{viewmodel.level}" />

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/updateUserButton"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:onClick="@{(view) -> viewmodel.updateUser(nameEdit.getText().toString(), surnameEdit.getText().toString(), cityEdit.getText().toString(), countryEdit.getText().toString())}"
                    android:text="@string/save"
...
